--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # GENERAL
 #################################################
 log.txt
+*.log
 *.swp
 build/
 #################################################
