--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@
 # GENERAL
 #################################################
 log.txt
-*.log
+*.log.1
+*.log.2
+*.log.3
+*.log.4
+*.log.5
 *.swp
 build/
 #################################################
