--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ a.out
 #################################################
 __pycache__/
 *.pyc
+*.pyo
 #################################################
 
 
