--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,16 @@ a.out
 __pycache__/
 *.pyc
 *.pyo
+venv/
 #################################################
 
+
+#################################################
+# SQLITE
+#################################################
+data.sqlite
+app.db
+#################################################
 
 #################################################
 # LATEX related 
