--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,14 @@ app.db
 #################################################
 
 #################################################
+# GOLANG
+#################################################
+bin/
+pkg/
+logs/
+#################################################
+
+#################################################
 # LATEX related 
 #################################################
 
