--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # GENERAL
 #################################################
 log.txt
+main.log
 *.log.1
 *.log.2
 *.log.3
@@ -11,6 +12,7 @@ log.txt
 *.log.5
 *.swp
 build/
+logs/
 #################################################
 
 
