--- a/.gitignore
+++ b/.gitignore
@@ -91,4 +91,12 @@ main-blx.bib
 main.run.xml
 #################################################
 
+#################################################
+# intellij idea settings ignored
+#################################################
+
+.idea/
+#################################################
+
+
 
