--- a/.gitignore
+++ b/.gitignore
@@ -34,10 +34,11 @@ venv/
 
 
 #################################################
-# SQLITE
+# SQLITE / database
 #################################################
 data.sqlite
 app.db
+db/
 #################################################
 
 #################################################
