--- a/cpp/test-cmake/cpp/CMakeLists.txt
+++ b/cpp/test-cmake/cpp/CMakeLists.txt
@@ -4,7 +4,7 @@ project(testcmake)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(
-    /home/codeman/mydata/git/ws/ws-misc-git/cpp/test-cmake/include
+    /home/codeman/.itsoflife/git/ws/ws-misc-git/cpp/test-cmake/include
     )
 
 add_executable(kaledioscope
