semi-automated-update

--- a/python/mysite/deployment_files/mysite_nginx.conf
+++ b/python/mysite/deployment_files/mysite_nginx.conf
@@ -10,7 +10,7 @@ upstream django {
 # configuration of the server
 server {
   # the port your site will be served on
-  listen      8000;
+  listen      5050;
   # the domain name it will serve for
   # server_name .example.com; # substitute your machine's IP address or FQDN
   server_name 0.0.0.0; # substitute your machine's IP address or FQDN
@@ -30,14 +30,14 @@ server {
     # must create the .htpasswd file using the command:
     #     htpasswd -c /home/codeman/.itsoflife/knotes-git/.htpasswd username;
     # install htpasswd using: sudo apt-get install apache2-utils
-    auth_basic_user_file /home/codeman/.itsoflife/knotes-git/.htpasswd;
+    auth_basic_user_file /home/codeman/.itsoflife/knots-git/.htpasswd;
     alias /home/codeman/.itsoflife/knots-git;
   }
 
   location /mydata {
     autoindex on;  # enables directory listing output
     auth_basic "Administrator Login";
-    auth_basic_user_file /home/codeman/.itsoflife/knotes-git/.htpasswd;
+    auth_basic_user_file /home/codeman/.itsoflife/knots-git/.htpasswd;
     alias /home/codeman/.itsoflife/mydata;
   }
 
