--- a/python/mysite/deployment_files/mysite_uwsgi.ini
+++ b/python/mysite/deployment_files/mysite_uwsgi.ini
@@ -3,12 +3,11 @@
 # usage: uwsgi --ini mysite_uwsgi.ini # the --ini option is used to specify a file
 # OR   --- use emperor mode
 # # create a directory for the vassals
-# sudo mkdir /etc/uwsgi
-# sudo mkdir /etc/uwsgi/vassals
+# sudo mkdir -p /etc/uwsgi/vassals
 # # symlink from the default config directory to your config file
 # sudo ln -s /path/to/your/mysite/mysite_uwsgi.ini /etc/uwsgi/vassals/
 # # run the emperor
-# uwsgi --emperor /etc/uwsgi/vassals --uid www-data --gid www-data
+# sudo /usr/local/bin/uwsgi --emperor /etc/uwsgi/vassals --uid www-data --gid www-data --daemonize /var/log/uwsgi-emperor.log
 [uwsgi]
 
 # Django-related settings
@@ -23,8 +22,9 @@ home            = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysi
 # master
 master          = true
 # maximum number of worker processes
-processes       = 10
+processes       = 4
 # the socket (use the full path to be safe - path should be <= 102 chars)
+# IMPORTANT: a socket/ dir was specifically created with owner codeman:www-data
 socket          = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/deployment_files/socket/ms.sock
 # ... with appropriate permissions - may be needed
 chmod-socket    = 664
@@ -33,7 +33,7 @@ chmod-socket    = 664
 vacuum          = true
 
 # user id
-uid             = www-data
-gid             = www-data
+# uid             = www-data
+# gid             = www-data
 
 
