semi-automated-update

--- a/python/mysite/deployment_files/mysite_nginx.conf
+++ b/python/mysite/deployment_files/mysite_nginx.conf
@@ -41,6 +41,12 @@ server {
     alias /home/codeman/.itsoflife/mydata;
   }
 
+  location /protected {
+    # protected static files
+    internal;  # this url access is only allowed internally
+    alias /home/codeman/.itsoflife/mydata/local/files;
+  }
+
   location /static {
       # your Django project's static files - amend as required
       alias /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/static;
