semi-automated-update

--- a/python/mysite/deployment_files/mysite_nginx.conf
+++ b/python/mysite/deployment_files/mysite_nginx.conf
@@ -1,9 +1,16 @@
 # mysite_nginx.conf
-# sudo ln -s ~/path/to/your/mysite/mysite_nginx.conf /etc/nginx/sites-enabled/
+# sudo ln -s /absolute/path/to/your/mysite/mysite_nginx.conf /etc/nginx/sites-enabled/
 
-# the upstream component nginx needs to connect to
-upstream django {
+# the upstream cluster component nginx needs to connect to
+upstream django_cluster {
+  # Note: if there are more than one servers here, nginx will load balance.
+
+  # 1. Using unix socket
+  #    The parent dir of ms.sock is owned by codeman:www-data
+  #    to give nginx necessary rights in the folder.
   server unix:///home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/deployment_files/socket/ms.sock; # for a file socket
+
+  # 2. Using IP address and port.
   # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
 }
 
@@ -28,7 +35,7 @@ server {
     autoindex off;  # disables directory listing output
     auth_basic "Administrator Login";
     # must create the .htpasswd file using the command:
-    #     htpasswd -c /home/codeman/.itsoflife/knotes-git/.htpasswd username;
+    #     htpasswd -c /<path>/knots-git/.htpasswd username;
     # install htpasswd using: sudo apt-get install apache2-utils
     auth_basic_user_file /home/codeman/.itsoflife/knots-git/.htpasswd;
     alias /home/codeman/.itsoflife/knots-git;
@@ -42,8 +49,10 @@ server {
   }
 
   location /protected {
-    # protected static files
+    # protected static files -- that require login for example.
+    # Only server-internal redirectes can reach this location.
     internal;  # this url access is only allowed internally
+    autoindex off;  # disables directory listing output
     alias /home/codeman/.itsoflife/mydata/local/files;
   }
 
@@ -54,8 +63,9 @@ server {
 
   # Finally, send all non-media requests to the Django server.
   location / {
-      uwsgi_pass  django;
+      uwsgi_pass  django_cluster;
       # include the uwsgi_params file you installed
+      # Note: user www-data should have read permission
       include     /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/deployment_files/uwsgi_params; 
   }
 }
