--- a/python/mysite/deployment_files/mysite_uwsgi.ini
+++ b/python/mysite/deployment_files/mysite_uwsgi.ini
@@ -23,6 +23,10 @@ home            = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysi
 master          = true
 # maximum number of worker processes
 processes       = 4
+
+# http socket settings (used in-place of socket below)
+# http-socket    = 0.0.0.0:5051
+
 # the socket (use the full path to be safe - path should be <= 102 chars)
 # IMPORTANT: a socket/ dir was specifically created with owner codeman:www-data
 socket          = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/deployment_files/socket/ms.sock
