added error pages

--- a/python/mysite/production/mysite_nginx.conf
+++ b/python/mysite/production/mysite_nginx.conf
@@ -5,13 +5,13 @@
 upstream django_cluster {
   # Note: if there are more than one servers here, nginx will load balance.
 
-  # 1. Using unix socket
+  # 1. Using unix runtime
   #    The parent dir of ms.sock is owned by codeman:www-data
   #    to give nginx necessary rights in the folder.
-  server unix:///home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/deployment_files/socket/ms.sock; # for a file socket
+  server unix:///home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/production/runtime/ms.sock; # for a file runtime
 
   # 2. Using IP address and port.
-  # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
+  # server 127.0.0.1:8001; # for a web port runtime (we'll use this first)
 }
 
 # configuration of the server
@@ -66,7 +66,7 @@ server {
       uwsgi_pass  django_cluster;
       # include the uwsgi_params file you installed
       # Note: user www-data should have read permission
-      include     /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/deployment_files/uwsgi_params; 
+      include     /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/production/uwsgi_params;
   }
 }
 
