--- a/python/mysite/production/mysite_uwsgi.ini
+++ b/python/mysite/production/mysite_uwsgi.ini
@@ -21,18 +21,19 @@ home            = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysi
 # process-related settings
 # master
 master          = true
+safe-pidfile    = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/production/runtime/uwsgi.pid
 # maximum number of worker processes
 processes       = 4
 
-# http socket settings (used in-place of socket below)
-# http-socket    = 0.0.0.0:5051
+# http runtime settings (used in-place of runtime below)
+# http-runtime    = 0.0.0.0:5051
 
-# the socket (use the full path to be safe - path should be <= 102 chars)
-# IMPORTANT: a socket/ dir was specifically created with owner codeman:www-data
-socket          = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/deployment_files/socket/ms.sock
+# the runtime (use the full path to be safe - path should be <= 102 chars)
+# IMPORTANT: a runtime/ dir was specifically created with owner codeman:www-data
+socket          = /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/production/runtime/ms.sock
 # ... with appropriate permissions - may be needed
 chmod-socket    = 664
-#chmod-socket    = 666
+#chmod-runtime    = 666
 # clear environment on exit
 vacuum          = true
 
