semi-automated-update

--- a/python/mysite/app/production/mysite_nginx.conf
+++ b/python/mysite/app/production/mysite_nginx.conf
@@ -37,15 +37,15 @@ server {
     # must create the .htpasswd file using the command:
     #     htpasswd -c /<path>/knots-git/.htpasswd username;
     # install htpasswd using: sudo apt-get install apache2-utils
-    auth_basic_user_file /home/codeman/.itsoflife/knots-git/.htpasswd;
-    alias /home/codeman/.itsoflife/knots-git;
+    auth_basic_user_file /app/knots-git/.htpasswd;
+    alias /app/knots-git;
   }
 
   location /mydata {
     autoindex on;  # enables directory listing output
     auth_basic "Administrator Login";
-    auth_basic_user_file /home/codeman/.itsoflife/knots-git/.htpasswd;
-    alias /home/codeman/.itsoflife/mydata;
+    auth_basic_user_file /app/knots-git/.htpasswd;
+    alias /app/mydata;
   }
 
   location /protected {
@@ -53,12 +53,12 @@ server {
     # Only server-internal redirectes can reach this location.
     internal;  # this url access is only allowed internally
     autoindex off;  # disables directory listing output
-    alias /home/codeman/.itsoflife/mydata/local/files;
+    alias /app/mydata/local/files;
   }
 
   location /static {
       # your Django project's static files - amend as required
-      alias /home/codeman/.itsoflife/mydata/git/ws/ws-misc-git/python/mysite/static;
+      alias /app/app/static;
   }
 
   # Finally, send all non-media requests to the Django server.
