semi-automated-update

--- a/python/mysite/Dockerfile
+++ b/python/mysite/Dockerfile
@@ -1,6 +1,13 @@
 # prepare the system
 FROM lazynintel/py3-django-uwsgi-nginx:1.0
 
+# For django rest framework: https://www.django-rest-framework.org
+RUN pip3 install djangorestframework
+# Markdown support for the browsable API.
+RUN pip3 install markdown
+# Filtering support
+RUN pip3 install django-filter
+
 # the main app location: /app/app
 
 # copy app
@@ -13,4 +20,4 @@ RUN bash setup_servers.sh
 
 # Start the main process
 WORKDIR /app
-CMD ["bash", "./start.sh"]
+CMD ["bash", "./docker_cmd.sh"]
